[package]
name = "dockerrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.16.0"
eframe = "0.26.2"
futures-util = "0.3.30"
tokio = { version = "1.36.0",  features = ["full"] }
walkdir = "2.5.0"
